--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.2.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
